--- a/testintBranch/Meta-information/api.yaml
+++ b/testintBranch/Meta-information/api.yaml
@@ -1,6 +1,6 @@
 id:
   providerName: admin
-  apiName: Online-Store
+  apiName: test
   version: v1.0.0
 description: This API contains operations related to online shopping store.
 type: HTTP
